CloudAlpacas-repo/salesforce/main/default/objects/Season__c/Season__c.object-meta.xml
<CustomObject>
    <description>시즌별 전체 경기 수와 실제 진행 경기 수를 관리하고, 팬의 시즌별 관람률을 계산하는 기준으로 사용.(Game 오브젝트의 Master-Detail 부모 오브젝트)</description>
    <label>Season</label>
    <nameField>
        <label>Season Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>