CloudAlpacas-repo/salesforce/main/default/objects/Season__c/fields/Total_Games__c.field-meta.xml
<CustomField>
    <fullName>Total_Games__c</fullName>
    <description>해당 시즌에 편성된 전체 경기 수를 기록(취소된 경기도 포함하며 수동으로 입력)</description>
    <inlineHelpText>해당 시즌에 편성된 전체 경기 수를 기록(취소된 경기도 포함하며 수동으로 입력)</inlineHelpText>
    <label>Total Games</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>